<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".score.ScoreFragment">

    <data>
        <variable
            name="scoreViewModel"
            type="com.example.brainer.score.ScoreViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/your_result"
            android:shadowColor="@color/colorAccent"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorAccent"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:text="@{@string/digit(scoreViewModel.score)}"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewResult" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/holo_blue_light"
            android:padding="10dp"
            android:text="@string/main_menu"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecyclerViewRecordsForScoreFragment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerViewRecordsForScoreFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/best_results"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:shadowColor="@color/colorAccent"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

    <!--android:shadowColor="@color/colorAccent"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"-->